# stock_scanner

./: .gitignore  README.md  TASKS.md  plan.md  plot.py  pyproject.toml
data/daily/: SPY.parquet
docs/: IMPLEMENTATION_PLAN.md  TRADING_METHODOLOGIES.md
recipes/: my_test_recipe.yaml
src/: cli.py  config.py
src/api/: tiingo.py
src/indicators/: technical.py
src/scanner/: engine.py  recipe.py
src/scanner/filters/: base.py  common.py  gap.py  trend.py
src/storage/: parquet_store.py
src/ui/: wizard.py
src/visualization/: plotter.py
tests/: test_scanner_engine.py
